--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -92,7 +92,7 @@ if ("${CMAKE_CXX_COMPILER_ID}"  STREQUAL "GNU")
         endif()
     endif()
     #In GNU gcc 4.7, Op::str(T, std::size_t(0)) raises a warning of type-limits
-    if (CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 4.7)
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-type-limits")
     endif()
 endif()
@@ -199,7 +199,7 @@ if(FL_BUILD_TESTS)
     if ("${CMAKE_CXX_COMPILER_ID}"  STREQUAL "GNU") 
         #Ignore QuickTest macro expansion comparison: CHECK(xstr(4+10) == "4+10")
         target_compile_options(fl-test PRIVATE -Wno-address)
-        if (CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 4.7)
+        if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
             #Ignore warnings of parentheses in CHECK(a == b) for Catch under g++-4.7
             target_compile_options(fl-test PRIVATE -Wno-parentheses)
         endif()
