--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,21 @@ script:
 matrix:
   include:
     # - osx:
-        
+
+#g++-6
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP11=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP11=OFF FL_USE_FLOAT=ON 
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP11=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP11=ON FL_USE_FLOAT=ON 
+
 ##clang-3.8
     - os: linux
       compiler: clang
