--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,34 @@ matrix:
   include:
     # - osx:
 
+##clang-4.0
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=ON FL_USE_FLOAT=ON
+
+##clang-3.9
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=ON FL_USE_FLOAT=ON
+
 #g++-6
     - os: linux
       compiler: g++
