--- a/.travis.yml
+++ b/.travis.yml
@@ -7,36 +7,65 @@ services:
 
 git:
   depth: 1
-  
+
 before_script:
   - docker build -t fuzzylite -f Dockerfile --build-arg CXX_COMPILER=${CXX_COMPILER} .
 
 script:
   - docker run -e CXX=${CXX_COMPILER} -e FL_CPP98=${FL_CPP98} -e FL_USE_FLOAT=${FL_USE_FLOAT} -e FL_BUILD_TESTS=ON -t fuzzylite release
-  
+
   - docker run -e CXX=${CXX_COMPILER} -e FL_CPP98=${FL_CPP98} -e FL_USE_FLOAT=${FL_USE_FLOAT} -e FL_BUILD_TESTS=ON -t fuzzylite debug
 
   - docker run -t fuzzylite documentation
 
 matrix:
   include:
-    # - osx:
-
-#g++-6
+############################################################################
+# Latest clang and g++
+############################################################################
+#clang-4.0
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-4.0 FL_CPP98=ON FL_USE_FLOAT=ON
+#g++-7
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=OFF FL_USE_FLOAT=OFF
+      env: CXX_COMPILER=g++-7 FL_CPP98=OFF FL_USE_FLOAT=OFF
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=OFF FL_USE_FLOAT=ON 
+      env: CXX_COMPILER=g++-7 FL_CPP98=OFF FL_USE_FLOAT=ON
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=ON FL_USE_FLOAT=OFF
+      env: CXX_COMPILER=g++-7 FL_CPP98=ON FL_USE_FLOAT=OFF
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=ON FL_USE_FLOAT=ON 
-
-##clang-3.8
+      env: CXX_COMPILER=g++-7 FL_CPP98=ON FL_USE_FLOAT=ON
+############################################################################
+# clang
+############################################################################
+#clang-3.9
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.9 FL_CPP98=ON FL_USE_FLOAT=ON
+#clang-3.8
     - os: linux
       compiler: clang
       env: CXX_COMPILER=clang++-3.8 FL_CPP98=OFF FL_USE_FLOAT=OFF
@@ -49,22 +78,7 @@ matrix:
     - os: linux
       compiler: clang
       env: CXX_COMPILER=clang++-3.8 FL_CPP98=ON FL_USE_FLOAT=ON
-
-#g++-5
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=OFF FL_USE_FLOAT=ON 
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=ON FL_USE_FLOAT=ON 
-
-##clang-3.7
+#clang-3.7
     - os: linux
       compiler: clang
       env: CXX_COMPILER=clang++-3.7 FL_CPP98=OFF FL_USE_FLOAT=OFF
@@ -77,7 +91,61 @@ matrix:
     - os: linux
       compiler: clang
       env: CXX_COMPILER=clang++-3.7 FL_CPP98=ON FL_USE_FLOAT=ON
-
+#clang-3.6
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.6 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.6 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.6 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.6 FL_CPP98=ON FL_USE_FLOAT=ON
+#clang-3.5
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.5 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.5 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.5 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++-3.5 FL_CPP98=ON FL_USE_FLOAT=ON
+############################################################################
+# g++
+############################################################################
+#g++-6
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-6 FL_CPP98=ON FL_USE_FLOAT=ON
+#g++-5
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-5 FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-5 FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-5 FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++-5 FL_CPP98=ON FL_USE_FLOAT=ON
 #g++-4.9
     - os: linux
       compiler: g++
@@ -91,63 +159,35 @@ matrix:
     - os: linux
       compiler: g++
       env: CXX_COMPILER=g++-4.9 FL_CPP98=ON FL_USE_FLOAT=ON
-
-##clang-3.6
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=ON FL_USE_FLOAT=ON
-
 #g++-4.8
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-4.8 FL_CPP98=OFF FL_USE_FLOAT=OFF 
+      env: CXX_COMPILER=g++-4.8 FL_CPP98=OFF FL_USE_FLOAT=OFF
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-4.8 FL_CPP98=OFF FL_USE_FLOAT=ON 
+      env: CXX_COMPILER=g++-4.8 FL_CPP98=OFF FL_USE_FLOAT=ON
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-4.8 FL_CPP98=ON FL_USE_FLOAT=OFF 
+      env: CXX_COMPILER=g++-4.8 FL_CPP98=ON FL_USE_FLOAT=OFF
     - os: linux
       compiler: g++
       env: CXX_COMPILER=g++-4.8 FL_CPP98=ON FL_USE_FLOAT=ON
-
-##clang-3.5
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=ON FL_USE_FLOAT=ON
-
 #g++-4.7
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-4.7 FL_CPP98=OFF FL_USE_FLOAT=OFF 
+      env: CXX_COMPILER=g++-4.7 FL_CPP98=OFF FL_USE_FLOAT=OFF
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-4.7 FL_CPP98=OFF FL_USE_FLOAT=ON 
+      env: CXX_COMPILER=g++-4.7 FL_CPP98=OFF FL_USE_FLOAT=ON
     - os: linux
       compiler: g++
-      env: CXX_COMPILER=g++-4.7 FL_CPP98=ON FL_USE_FLOAT=OFF 
+      env: CXX_COMPILER=g++-4.7 FL_CPP98=ON FL_USE_FLOAT=OFF
     - os: linux
       compiler: g++
       env: CXX_COMPILER=g++-4.7 FL_CPP98=ON FL_USE_FLOAT=ON
-
+############################################################################
+# Obsolete compilers
+############################################################################
 # #clang-3.4 does not install properly in ubuntu (clang++-3.4 command not found)
 #     - os: linux
 #       compiler: clang
@@ -161,22 +201,6 @@ matrix:
 #     - os: linux
 #       compiler: clang
 #       env: CXX_COMPILER=clang++-3.4 FL_CPP98=ON FL_USE_FLOAT=ON
-
-# #g++-4.6 does not have an installation candidate in ubuntu
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=OFF FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=OFF FL_USE_FLOAT=ON
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=ON FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=ON FL_USE_FLOAT=ON
-
-
 # #clang-3.3 does not install properly in ubuntu (clang++-3.4 command not found)
 #     - os: linux
 #       compiler: clang
@@ -190,7 +214,19 @@ matrix:
 #     - os: linux
 #       compiler: clang
 #       env: CXX_COMPILER=clang++-3.3 FL_CPP98=ON FL_USE_FLOAT=ON
-
+# #g++-4.6 does not have an installation candidate in ubuntu
+#     - os: linux
+#       compiler: g++
+#       env: CXX_COMPILER=g++-4.6 FL_CPP98=OFF FL_USE_FLOAT=OFF
+#     - os: linux
+#       compiler: g++
+#       env: CXX_COMPILER=g++-4.6 FL_CPP98=OFF FL_USE_FLOAT=ON
+#     - os: linux
+#       compiler: g++
+#       env: CXX_COMPILER=g++-4.6 FL_CPP98=ON FL_USE_FLOAT=OFF
+#     - os: linux
+#       compiler: g++
+#       env: CXX_COMPILER=g++-4.6 FL_CPP98=ON FL_USE_FLOAT=ON
 # #g++-4.5 does not have an installation candidate in ubuntu
 #     - os: linux
 #       compiler: g++
