--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ git:
   depth: 1
 
 before_script:
-  - docker build -t fuzzylite -f Dockerfile --build-arg CXX_COMPILER=${CXX_COMPILER} .
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then 
+      docker build -t fuzzylite -f Dockerfile --build-arg CXX_COMPILER=${CXX_COMPILER} . ;
+    fi
 
 script:
 ##linux
